--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap');
+:root {
+    --cyan: hsl(179, 62%, 43%);
+    --yellow: hsl(71, 73%, 54%);
+    --gray: hsl(204, 43%, 93%);
+    --blue: hsl(218, 22%, 67%);
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
 
 * {
     margin: 0;
@@ -8,221 +15,126 @@
 
 body {
     min-height: 100vh;
-    font-size: 15px;
-    font-family: 'League Spartan', sans-serif;
+    width: 100%;
+    font-family: 'Karla', sans-serif;
+    background-color: var(--gray);
     display: flex;
     align-items: center;
-    background-color: hsl(0, 0%, 100%);
-    background-image: url(images/bg-pattern-top-mobile.svg) , url(images/bg-pattern-bottom-desktop.svg);
-    background-repeat: no-repeat , no-repeat;
 }
 
 .container {
-    margin: 0 auto;
     max-width: 1000px;
+    margin: 0 auto;
 }
 
 .main {
-    display: grid;
-    grid-template-columns: 50% 50%;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 3px 100px 1px hsla(217, 22%, 67%, 0.64);
 }
 
-.text {
-    padding: 0 50px 150px 50px;
+header {
+    background-color: white;
+    padding: 35px;
 }
 
-.text h1 {
-    color: hsl(300, 43%, 22%);
+header h3{
+    color: var(--cyan);
     font-weight: 700;
     padding-bottom: 20px;
-    padding-right: 70px;
-    font-size: 45px;
-
+    letter-spacing: 1px;
 }
 
-.text > p {
-    color: hsl(303, 10%, 53%);
+header h4 {
+    color: var(--yellow);
+    font-weight: 700;
+    padding-bottom: 15px;
+}
+
+header p {
+    color: var(--blue);
+    line-height: 1.57;
+    font-size: 15px;
+}
+
+.content {
+    background-color: var(--cyan);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.content p {
+    color:rgba(255, 255, 255, 0.645);
     font-weight: 400;
-    line-height: 1.2;
-    font-size: 17px;
+    font-size: 14px;
+    
 }
 
-.box {
-    background-color:   hsl(300, 24%, 96%);
-    padding: 15px 25px;
-    width: calc(100% - 100px);
-    border-radius: 10px;
-    margin: 15px;
+.left , .right {
+    padding: 35px;
+}
+
+.left h4 {
+    color: white;
+    font-weight: 400;
+    letter-spacing: 1px;
+    padding-bottom: 20px;
+}
+
+.left p {
+    padding-bottom: 25px;
+}
+
+.left p span {
+    font-size: 21px;
+    font-weight: 700;
+    color: white;
+    padding-right: 10px;
+}
+
+.left p.basic {
+    padding-bottom: 20px;
+}
+
+.left a {
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    display: block;
+    border: 1px solid hsl(71, 73%, 54%) ;
+    width: 100%;
+    padding: 9px 0;
+    text-align: center;
+    margin-top: 20px;
+    border-radius: 5px;
+    background-color: var(--yellow);
+}
+
+.right {
+    background-color:  hsl(179, 62%, 47% );
 } 
 
-.rate .box .stars {
-    display: inline-block;
+.right h4 {
+    letter-spacing: 1px;
+    color: white;
+    font-weight: 400;
+    padding-bottom: 20px;
 }
 
-.rate .box .stars img {
-    padding:  0 2px;
+.right p {
+    line-height: 1.5;
 }
 
-.rate .box > p {
-    display: inline-block;
-    padding-left: 25px;
-    color: hsl(300, 43%, 22%);
-    font-weight: 700;
-}
 
-.cards {
-    grid-column: 1/3 ;
-}
-
-.one {
-    position: relative;
-    left: -20px; 
-}
-
-.two {
-    position: relative;
-    left: 10px; 
-}
-
-.three {
-    position: relative;
-    left: 40px; 
-}
-
-.cards {
-    display: flex;
-    gap: 10px;
-    padding: 0 50px;
-}
-
-.card {
-    background-color:  hsl(300, 43%, 22%);
-    border-radius: 8px;
-    max-width: 300px;
-    padding: 30px;
-}
-
-.card img {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-    margin-bottom: 25px;
-}
-
-.photo {
-    display: flex;
-    flex-flow: row wrap;
-    position: relative;
-}
-
-.photo p{
-    padding-left: 10px;
-}
-
-p.author {
-    color: hsl(0, 0%, 100%);
-}
-
-p.position {
-    color:  hsl(333, 80%, 67%);
-    position: absolute;
-    top: 30px;
-    left: 59px;
-}
-
-p.review {
-    color: hsl(0, 0%, 100%);
-    line-height: 1.3;
-}
-
-.first {
-    position: relative;
-    bottom: 50px;
-}
-
-.middle {
-    position: relative;
-    bottom: 25px;
-}
-
-.bottom {
-    position: relative;
-}
-
-@media screen and (max-width:610px) {
+@media screen and (max-width : 635px) {
     
     .container {
-        margin: 2rem auto;
-    }
-    
-    .main {
-        display: flex;
-        flex-flow: column wrap;
-    }
-
-    .text h1 {
-        padding-right: 30px;
-    }
-    
-    .text {
-        padding: 0 70px 30px 70px;
-    }
-
-    .box {
-        width: 70%;
-        margin: 10px auto;
+        max-width: 100%;
+        margin: 10px 10px;
     } 
     
-    .rate {
-        padding-bottom: 100px;
-    }
-
-    .rate .box .stars {
-        display: inline-block;
-    }
-    
-    .rate .box .stars img {
-        padding:  0 0px;
-    }
-    
-    .rate .box > p {
-        display: block;
-        padding-left: 0;
-        padding-top: 5px;
-        
-    }
-
-    .one {
-        position: relative;
-        left: 0px; 
-    }
-    
-    .two {
-        position: relative;
-        left: 0px; 
-    }
-    
-    .three {
-        position: relative;
-        left: 0px; 
-    }
-    
-    .cards {
-        display: flex;
-        flex-flow: column wrap;
-    }
-    
-    .cards {
-        margin: 0 auto;
-    }
-    
-    .photo {
-        display: flex;
-        flex-flow: column no-wrap;
-        position: relative;
-    }
-    
+    .content {
+        grid-template-columns: 1fr ;
+    } 
 
 }
-
